# simba-plus

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLI.md  Gemfile  _config.yml
docs/api/: index.html  search.js  simba_plus.html
docs/api/simba_plus/: _settings.html  _utils copy.html  _utils.html  datasets.html  decoders.html  encoders.html  evaluate.html  evaluation_utils.html  get_adata.html  load_data.html  loader.html  losses.html  model_prox.html  plotting.html  post_training.html  prob_decoders.html  readwrite.html  simba_plus.html  train.html  utils.html
docs/api/simba_plus/datasets/: _datasets.html
docs/api/simba_plus/post_training/: linking.html
notebooks/: 00_internal_validation.ipynb  tutorial-crispr.ipynb  tutorial-eqtl.ipynb
scripts/: generate_api_docs.py  update_cli_docs.py
simba+/: _utils.py  decoders.py  encoders.py  evaluation_utils.py  losses.py  model_prox.py  prob_decoders.py  train_prox.py
src/simba_plus/: __init__.py  _settings.py  _utils.py  decoders.py  evaluate.py  get_adata.py  load_data.py  loader.py  losses.py  model_prox.py  predict.py  prob_decoders.py  readwrite.py  simba_plus.py  train.py  train_xgboost.py  utils.py
src/simba_plus/datasets/: .__datasets.py  _datasets.py
src/simba_plus/discovery/: add_features.py  build_evalset.py  build_evaltset.py  model_training.py  plot_utils.py
src/simba_plus/heritability/: create_report.py  get_residual.py  get_taus.py  ldsc.py  ldsc_h2.sh  ldsc_h2_baseline.sh  ldsc_l2.sh  utils.py
src/simba_plus/linking/: __init__.py  _utils.py  add_features.py  build_evalset.py  candidate_links.py  model_training.py  plot_utils.py  supervised_predict.py  supervised_train.py  unsupervised.py
src/simba_plus/plotting/: __init__.py  factors.py  heritability.py  plotting.py  utils.py
src/simba_plus/post_training/: __init__.py  enrichment.py  factors.py  linking.py
tests/: test_cli.py  test_load.py  test_train.py
tests/test_data/: adata_CG.h5ad
