[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "simba_plus"
version = "0.1.1"
authors = [
  { name="Jayoung Ryu", email="jayoungkimryu@gmail.com" },
  { name="Junxi Feng", email="junxifeng0511@gmail.com"}
]
dependencies = [
  "torch_geometric", "scvi-tools", "anndata", "lightning", "scikit-learn", "scipy<1.15", "matplotlib", "seaborn", "wandb", "tables", "papermill", "pybedtools"]
description = "SIMBA+"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"


[project.urls]
Homepage = "https://github.com/pinellolab/simba-plus"
Issues = "https://github.com/pinellolab/simba-plus/issues"

[project.scripts]
"simba+" = "simba_plus.simba_plus:main"

[tool.setuptools]
packages = ["simba_plus"]
package-dir = {"" = "src"}